fix: article wrap

--- a/source/css/_partial/reset.styl
+++ b/source/css/_partial/reset.styl
@@ -6,7 +6,7 @@ body
   font-size 14px
   color $color-default
   font-family 'Hiragino Sans GB', 'Hiragino Sans GB W3', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif
-  background url(hexo-config('background_image')) fixed no-repeat
+  background $color-background url(hexo-config('background_image')) fixed no-repeat
   a
     color $color-default
     text-decoration none
